2007-07-10  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: Add --with-db-uniquename option to support
	db libraries and functions with unique name extension.
	Patch from Diego 'Flameeyes' Pettenò <flameeyes@gmail.com>.

	* modules/pam_limits/pam_limits.c: Include locale.h.

2007-07-06  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.8.0

	* configure.in: Check for audit_log_acct_message instead of
	audit_log_user_message.
	* libpam/pam_audit.c: Use audit_log_acct_message.
	Based on patch from Mark J Cox <mjc@redhat.com>.
	* libpam/Makefile.am: Bump version number of libpam.

	* modules/pam_umask/pam_umask.c (set_umask): mode_t is 32bit,
	not 64bit.

	* xtests/tst-pam_limits1.c: Fix printf arguments.

	* po/*.po: Merge po files with latest code changes.

2007-06-26  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_limits/pam_limits.c (process_limit): Check upper and
	lower limit of nice value, fix off-by-one in conversation to rlim_t.
	* xtests/Makefile.am: Add new pam_limits test case.
	* xtests/limits.conf: New, config file for test case.
	* xtests/pam_limits1.c: New, test case for RLIMIT_NICE.
	* xtests/pam_limits1.sh: Likewise.
	* xtests/pam_limits1.pamd: Likewise.

2007-06-25  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_access/pam_access.c (list_match): Use saveptr of strtok_r
	result for recursive calls.
	* xtests/Makefile.am: Add new pam_access test cases.
	* xtests/pam_access1.c: New test case.
	* xtests/pam_access2.c: Likewise.
	* xtests/pam_access3.c: Likewise.
	* xtests/pam_access4.c: Likewise.
	* xtests/pam_access1.sh: Wrapper to create user accounts.
	* xtests/pam_access2.sh: Likewise.
	* xtests/pam_access3.sh: Likewise.
	* xtests/pam_access4.sh: Likewise.
	* xtests/pam_access1.pamd: PAM config file for pam_access tests.
	* xtests/pam_access2.pamd: Likewise.
	* xtests/pam_access3.pamd: Likewise.
	* xtests/pam_access4.pamd: Likewise.
	* xtests/access.conf: Config file for pam_access tests.